@@ -1,13 +1,10 @@
 package com.ureca.uhyu.domain.admin.service;
 
+import com.querydsl.core.Tuple;
 import com.ureca.uhyu.domain.admin.dto.response.StatisticsFilterRes;
+import com.ureca.uhyu.domain.admin.enums.StatisticsType;
 import com.ureca.uhyu.domain.admin.repository.StatisticsRepository;
-import com.ureca.uhyu.domain.user.enums.ActionType;
-import com.ureca.uhyu.domain.user.repository.actionLogs.ActionLogsRepository;
-import com.ureca.uhyu.domain.user.repository.bookmark.BookmarkRepository;
 import com.ureca.uhyu.domain.admin.dto.response.*;
-import com.ureca.uhyu.domain.recommendation.repository.RecommendationRepository;
-import com.ureca.uhyu.domain.user.repository.history.HistoryRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -24,155 +21,132 @@ import static org.mockito.Mockito.*;
 class AdminServiceTest {
 
     @Mock
-    private BookmarkRepository bookmarkRepository;
-
-    @Mock
-    private ActionLogsRepository actionLogsRepository;
-
-    @Mock
-    private RecommendationRepository recommendationRepository;
-
-    @Mock
-    private HistoryRepository historyRepository;
+    private StatisticsRepository statisticsRepository;
 
     @InjectMocks
     private AdminService adminService;
 
-    @Mock
-    private StatisticsRepository statisticsRepository;
-
-    @DisplayName("카테고리, 브랜드 별 즐겨찾기 갯수 통계 조회 - 성공")
+    @DisplayName("카테고리, 브랜드 별 즐겨찾기/마이맵 갯수 통계 조회 - 성공")
     @Test
-    void findStatisticsBookmarkByCategoryAndBrand() {
+    void findStatisticsBookmarkByCategoryAndBrand_success() {
         // given
-        List<StatisticsBookmarkMyMapRes> mockResList = List.of(
-                StatisticsBookmarkMyMapRes.of(
-                        1L,
-                        "카테고리A",
-                        30,
-                        new ArrayList<>(List.of(
-                                BookmarksByBrand.of("브랜드1", 10),
-                                BookmarksByBrand.of("브랜드2", 20)
-                        ))
-                ),
-                StatisticsBookmarkMyMapRes.of(
-                        2L,
-                        "카테고리B",
-                        15,
-                        new ArrayList<>(List.of(
-                                BookmarksByBrand.of("브랜드3", 15)
-                        ))
-                )
-        );
+        Tuple tuple1 = mock(Tuple.class);
+        when(tuple1.get(0, String.class)).thenReturn("브랜드1");
+        when(tuple1.get(1, Long.class)).thenReturn(1L);
+        when(tuple1.get(2, String.class)).thenReturn("카테고리A");
+        when(tuple1.get(4, Long.class)).thenReturn(10L);
 
-        when(bookmarkRepository.findStatisticsBookmarkByCategoryAndBrand()).thenReturn(mockResList);
+        Tuple tuple2 = mock(Tuple.class);
+        when(tuple2.get(0, String.class)).thenReturn("브랜드2");
+        when(tuple2.get(1, Long.class)).thenReturn(1L);
+        when(tuple2.get(2, String.class)).thenReturn("카테고리A");
+        when(tuple2.get(4, Long.class)).thenReturn(20L);
+
+        Tuple tuple3 = mock(Tuple.class);
+        when(tuple3.get(0, String.class)).thenReturn("브랜드3");
+        when(tuple3.get(1, Long.class)).thenReturn(2L);
+        when(tuple3.get(2, String.class)).thenReturn("카테고리B");
+        when(tuple3.get(4, Long.class)).thenReturn(15L);
+
+        List<Tuple> mockTuples = List.of(tuple1, tuple2, tuple3);
+        when(statisticsRepository.findBookmarkMyMapStatistics()).thenReturn(mockTuples);
 
         // when
         List<StatisticsBookmarkMyMapRes> result = adminService.findStatisticsBookmarkByCategoryAndBrand();
 
         // then
         assertEquals(2, result.size());
-        assertEquals("카테고리A", result.get(0).categoryName());
-        assertEquals(30, result.get(0).sumStatisticsBookmarksByCategory());
-        assertEquals(2, result.get(0).bookmarksByBrandList().size());
-        assertEquals("브랜드1", result.get(0).bookmarksByBrandList().get(0).brandName());
 
-        assertEquals("카테고리B", result.get(1).categoryName());
-        assertEquals(15, result.get(1).sumStatisticsBookmarksByCategory());
-        assertEquals(1, result.get(1).bookmarksByBrandList().size());
-        assertEquals("브랜드3", result.get(1).bookmarksByBrandList().get(0).brandName());
-        verify(bookmarkRepository).findStatisticsBookmarkByCategoryAndBrand();
+        StatisticsBookmarkMyMapRes catA = result.get(0);
+        assertEquals("카테고리A", catA.categoryName());
+        assertEquals(30, catA.sumStatisticsBookmarksByCategory());
+        assertEquals(2, catA.bookmarksByBrandList().size());
+
+        StatisticsBookmarkMyMapRes catB = result.get(1);
+        assertEquals("카테고리B", catB.categoryName());
+        assertEquals(15, catB.sumStatisticsBookmarksByCategory());
+        assertEquals(1, catB.bookmarksByBrandList().size());
+
+        verify(statisticsRepository).findBookmarkMyMapStatistics();
     }
-    
-    @DisplayName("카테고리, 브랜드 별 즐겨찾기 갯수 통계 조회 - 빈 리스트")
+
+    @DisplayName("카테고리, 브랜드 별 즐겨찾기/마이맵 통계 조회 - 빈 리스트")
     @Test
-    void findStatisticsBookmarkByCategoryAndBrand_EmptyDataset() {
+    void findStatisticsBookmarkByCategoryAndBrand_empty() {
         // given
-        when(bookmarkRepository.findStatisticsBookmarkByCategoryAndBrand()).thenReturn(List.of());
+        when(statisticsRepository.findBookmarkMyMapStatistics()).thenReturn(Collections.emptyList());
 
         // when
         List<StatisticsBookmarkMyMapRes> result = adminService.findStatisticsBookmarkByCategoryAndBrand();
 
         // then
         assertTrue(result.isEmpty());
-        verify(bookmarkRepository).findStatisticsBookmarkByCategoryAndBrand();
+        verify(statisticsRepository).findBookmarkMyMapStatistics();
     }
 
-    @DisplayName("카테고리별 필터링 횟수 통계 조회 - 성공")
+    @DisplayName("카테고리별 필터링 통계 조회 - 성공")
     @Test
-    void findStatisticsFilterByCategory() {
+    void findStatisticsFilterByCategory_success() {
         // given
-        StatisticsFilterRes res1 = new StatisticsFilterRes(1L, "카페", 15);
-        StatisticsFilterRes res2 = new StatisticsFilterRes(2L, "패션", 8);
-        List<StatisticsFilterRes> mockResult = List.of(res1, res2);
+        Tuple tuple1 = mock(Tuple.class);
+        when(tuple1.get(0, Long.class)).thenReturn(1L);
+        when(tuple1.get(1, String.class)).thenReturn("카페");
+        when(tuple1.get(2, Long.class)).thenReturn(15L);
 
-        when(actionLogsRepository.findStatisticsFilterByActionType(ActionType.FILTER_USED))
-                .thenReturn(mockResult);
+        Tuple tuple2 = mock(Tuple.class);
+        when(tuple2.get(0, Long.class)).thenReturn(2L);
+        when(tuple2.get(1, String.class)).thenReturn("패션");
+        when(tuple2.get(2, Long.class)).thenReturn(8L);
+
+        when(statisticsRepository.findFilterStatistics()).thenReturn(List.of(tuple1, tuple2));
 
         // when
         List<StatisticsFilterRes> result = adminService.findStatisticsFilterByCategory();
 
         // then
         assertEquals(2, result.size());
+        assertEquals("카페", result.get(0).categoryName());
+        assertEquals(15, result.get(0).sumStatisticsFilterByCategory());
 
-        StatisticsFilterRes first = result.get(0);
-        assertEquals(1L, first.categoryId());
-        assertEquals("카페", first.categoryName());
-        assertEquals(15, first.sumStatisticsFilterByCategory());
-
-        StatisticsFilterRes second = result.get(1);
-        assertEquals(2L, second.categoryId());
-        assertEquals("패션", second.categoryName());
-        assertEquals(8, second.sumStatisticsFilterByCategory());
-
-        verify(actionLogsRepository).findStatisticsFilterByActionType(ActionType.FILTER_USED);
+        verify(statisticsRepository).findFilterStatistics();
     }
 
     @DisplayName("카테고리, 브랜드별 추천 통계 조회 - 성공")
     @Test
     void findStatisticsRecommendationByCategoryAndBrand_success() {
         // given
-        RecommendationsByBrand brand1 = RecommendationsByBrand.of("스타벅스", 12);
-        RecommendationsByBrand brand2 = RecommendationsByBrand.of("이디야", 8);
-        StatisticsRecommendationRes category1 = StatisticsRecommendationRes.of(1L, "카페", 20, List.of(brand1, brand2));
+        Tuple tuple1 = mock(Tuple.class);
+        when(tuple1.get(0, String.class)).thenReturn("브랜드1");
+        when(tuple1.get(1, Long.class)).thenReturn(1L);
+        when(tuple1.get(2, String.class)).thenReturn("카테고리A");
+        when(tuple1.get(3, Long.class)).thenReturn(10L);
 
-        RecommendationsByBrand brand3 = RecommendationsByBrand.of("무신사", 6);
-        StatisticsRecommendationRes category2 = StatisticsRecommendationRes.of(2L, "패션", 6, List.of(brand3));
+        Tuple tuple2 = mock(Tuple.class);
+        when(tuple2.get(0, String.class)).thenReturn("브랜드2");
+        when(tuple2.get(1, Long.class)).thenReturn(1L);
+        when(tuple2.get(2, String.class)).thenReturn("카테고리A");
+        when(tuple2.get(3, Long.class)).thenReturn(5L);
 
-        List<StatisticsRecommendationRes> mockResult = List.of(category1, category2);
-
-        when(recommendationRepository.findStatisticsRecommendationByCategory()).thenReturn(mockResult);
+        when(statisticsRepository.findRecommendationStatistics()).thenReturn(List.of(tuple1, tuple2));
 
         // when
         List<StatisticsRecommendationRes> result = adminService.findStatisticsRecommendationByCategoryAndBrand();
 
         // then
-        assertEquals(2, result.size());
+        assertEquals(1, result.size());
+        StatisticsRecommendationRes res = result.get(0);
+        assertEquals("카테고리A", res.categoryName());
+        assertEquals(15, res.sumStatisticsRecommendationByCategory());
+        assertEquals(2, res.recommendationsByBrandList().size());
 
-        StatisticsRecommendationRes res1 = result.get(0);
-        assertEquals(1L, res1.categoryId());
-        assertEquals("카페", res1.categoryName());
-        assertEquals(20, res1.sumStatisticsRecommendationByCategory());
-        assertEquals(2, res1.recommendationsByBrandList().size());
-        assertEquals("스타벅스", res1.recommendationsByBrandList().get(0).brandName());
-        assertEquals(12, res1.recommendationsByBrandList().get(0).sumRecommendationsByBrand());
-
-        StatisticsRecommendationRes res2 = result.get(1);
-        assertEquals(2L, res2.categoryId());
-        assertEquals("패션", res2.categoryName());
-        assertEquals(6, res2.sumStatisticsRecommendationByCategory());
-        assertEquals(1, res2.recommendationsByBrandList().size());
-        assertEquals("무신사", res2.recommendationsByBrandList().get(0).brandName());
-        assertEquals(6, res2.recommendationsByBrandList().get(0).sumRecommendationsByBrand());
-
-        verify(recommendationRepository).findStatisticsRecommendationByCategory();
+        verify(statisticsRepository).findRecommendationStatistics();
     }
 
     @DisplayName("카테고리, 브랜드별 추천 통계 조회 - 빈 리스트")
     @Test
-    void findStatisticsRecommendationByCategoryAndBrand_emptyDataset() {
+    void findStatisticsRecommendationByCategoryAndBrand_empty() {
         // given
-        when(recommendationRepository.findStatisticsRecommendationByCategory()).thenReturn(Collections.emptyList());
+        when(statisticsRepository.findRecommendationStatistics()).thenReturn(Collections.emptyList());
 
         // when
         List<StatisticsRecommendationRes> result = adminService.findStatisticsRecommendationByCategoryAndBrand();
@@ -181,45 +155,37 @@ class AdminServiceTest {
         assertNotNull(result);
         assertTrue(result.isEmpty(), "빈 리스트가 반환되어야 합니다.");
 
-        verify(recommendationRepository).findStatisticsRecommendationByCategory();
+        verify(statisticsRepository).findRecommendationStatistics();
     }
 
-    @DisplayName("카테고리, 브랜드별 멤버십 사용횟수 통계 조회 - 성공")
+    @DisplayName("카테고리, 브랜드별 멤버십 사용 통계 조회 - 성공")
     @Test
     void findStatisticsMembershipUsageByCategoryAndBrand_success() {
         // given
-        List<MembershipUsageByBrand> usageList1 = List.of(
-                MembershipUsageByBrand.of("브랜드A", 5),
-                MembershipUsageByBrand.of("브랜드B", 3)
-        );
+        Tuple tuple = mock(Tuple.class);
+        when(tuple.get(0, String.class)).thenReturn("브랜드1");
+        when(tuple.get(1, Long.class)).thenReturn(1L);
+        when(tuple.get(2, String.class)).thenReturn("카테고리1");
+        when(tuple.get(3, Long.class)).thenReturn(7L);
 
-        List<MembershipUsageByBrand> usageList2 = List.of(
-                MembershipUsageByBrand.of("브랜드C", 2)
-        );
-
-        List<StatisticsMembershipUsageRes> expected = List.of(
-                StatisticsMembershipUsageRes.of(1L, "카테고리1", 8, usageList1),
-                StatisticsMembershipUsageRes.of(2L, "카테고리2", 2, usageList2)
-        );
-
-        when(historyRepository.findStatisticsMembershipUsageByCategory()).thenReturn(expected);
+        when(statisticsRepository.findMembershipUsageStatistics()).thenReturn(List.of(tuple));
 
         // when
         List<StatisticsMembershipUsageRes> result = adminService.findStatisticsMembershipUsageByCategoryAndBrand();
 
         // then
-        assertEquals(2, result.size());
+        assertEquals(1, result.size());
         assertEquals("카테고리1", result.get(0).categoryName());
-        assertEquals(8, result.get(0).sumStatisticsMembershipUsageByCategory());
-        assertEquals("브랜드A", result.get(0).membershipUsageByBrandList().get(0).brandName());
-        verify(historyRepository).findStatisticsMembershipUsageByCategory();
+        assertEquals(7, result.get(0).sumStatisticsMembershipUsageByCategory());
+
+        verify(statisticsRepository).findMembershipUsageStatistics();
     }
 
-    @DisplayName("카테고리, 브랜드별 멤버십 사용횟수 통계 조회 - 빈 리스트")
+    @DisplayName("카테고리, 브랜드별 멤버십 사용 통계 조회 - 빈 리스트")
     @Test
-    void findStatisticsMembershipUsageByCategoryAndBrand_emptyDataset() {
+    void findStatisticsMembershipUsageByCategoryAndBrand_empty() {
         // given
-        when(historyRepository.findStatisticsMembershipUsageByCategory()).thenReturn(List.of());
+        when(statisticsRepository.findMembershipUsageStatistics()).thenReturn(Collections.emptyList());
 
         // when
         List<StatisticsMembershipUsageRes> result = adminService.findStatisticsMembershipUsageByCategoryAndBrand();
@@ -227,41 +193,40 @@ class AdminServiceTest {
         // then
         assertNotNull(result);
         assertTrue(result.isEmpty());
-        verify(historyRepository).findStatisticsMembershipUsageByCategory();
+        verify(statisticsRepository).findMembershipUsageStatistics();
     }
 
     @DisplayName("전체 통계 조회 - 성공")
     @Test
     void findStatisticsTotal_success() {
         // given
-        Long bookmarkCount = 100L;
-        Long filterCount = 25L;
-        Long historyCount = 55L;
-
-        when(bookmarkRepository.count()).thenReturn(bookmarkCount);
-        when(actionLogsRepository.countByActionType(ActionType.FILTER_USED)).thenReturn(filterCount);
-        when(historyRepository.count()).thenReturn(historyCount);
+        when(statisticsRepository.countByStatisticsTypeIn(List.of(StatisticsType.BOOKMARK, StatisticsType.MYMAP)))
+                .thenReturn(100L);
+        when(statisticsRepository.countByStatisticsType(StatisticsType.FILTER))
+                .thenReturn(25L);
+        when(statisticsRepository.countByStatisticsType(StatisticsType.MEMBERSHIP_USAGE))
+                .thenReturn(55L);
 
         // when
         StatisticsTotalRes result = adminService.findStatisticsTotal();
 
         // then
-        assertEquals(bookmarkCount, result.totalBookmarkMyMap());
-        assertEquals(filterCount, result.totalFiltering());
-        assertEquals(historyCount, result.totalMembershipUsage());
+        assertEquals(100L, result.totalBookmarkMyMap());
+        assertEquals(25L, result.totalFiltering());
+        assertEquals(55L, result.totalMembershipUsage());
 
-        verify(bookmarkRepository).count();
-        verify(actionLogsRepository).countByActionType(ActionType.FILTER_USED);
-        verify(historyRepository).count();
+        verify(statisticsRepository).countByStatisticsTypeIn(List.of(StatisticsType.BOOKMARK, StatisticsType.MYMAP));
+        verify(statisticsRepository).countByStatisticsType(StatisticsType.FILTER);
+        verify(statisticsRepository).countByStatisticsType(StatisticsType.MEMBERSHIP_USAGE);
     }
 
     @DisplayName("전체 통계 조회 - db에 값이 든게 없을경우")
     @Test
     void findStatisticsTotal_emptyDataset() {
         // given
-        when(bookmarkRepository.count()).thenReturn(0L);
-        when(actionLogsRepository.countByActionType(ActionType.FILTER_USED)).thenReturn(0L);
-        when(historyRepository.count()).thenReturn(0L);
+        when(statisticsRepository.countByStatisticsTypeIn(List.of(StatisticsType.BOOKMARK, StatisticsType.MYMAP))).thenReturn(0L);
+        when(statisticsRepository.countByStatisticsType(StatisticsType.FILTER)).thenReturn(0L);
+        when(statisticsRepository.countByStatisticsType(StatisticsType.MEMBERSHIP_USAGE)).thenReturn(0L);
 
         // when
         StatisticsTotalRes result = adminService.findStatisticsTotal();
@@ -271,8 +236,8 @@ class AdminServiceTest {
         assertEquals(0L, result.totalFiltering());
         assertEquals(0L, result.totalMembershipUsage());
 
-        verify(bookmarkRepository).count();
-        verify(actionLogsRepository).countByActionType(ActionType.FILTER_USED);
-        verify(historyRepository).count();
+        verify(statisticsRepository).countByStatisticsTypeIn(List.of(StatisticsType.BOOKMARK, StatisticsType.MYMAP));
+        verify(statisticsRepository).countByStatisticsType(StatisticsType.FILTER);
+        verify(statisticsRepository).countByStatisticsType(StatisticsType.MEMBERSHIP_USAGE);
     }
 }
